# smart-core-assistant-painel

./: .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  ANALISE_SETUP_PROBLEMAS_SOLUCOES.md  ATUALIZACAO_PROCESSAMENTO_MENSAGENS_WHATSAPP.md  ATUALIZACAO_TIPO_MENSAGEM.md  CHANGELOG.md  CONFIGURACAO_START_SERVICES.md  CORRECAO_FINAL_TIPOMENSAGEM.md  CORRECAO_TYPING_MYPY.md  CORRECAO_VETOR_STORAGE.md  CORRECOES_AMBIENTE.md  CORRECOES_PROCESSAMENTO_MENSAGENS.md  DJANGO_Q_START_SERVICES.md  DOCKER-COMMANDS.md  DOCKER.md  Dockerfile  Dockerfile.dev  EXEMPLO_REMETENTES.md  GUIA_SETUP_COMPLETO.md  IMPLEMENTACAO_PROCESSAMENTO_ENTIDADES_CLIENTE.md  MELHORIAS_SIGNALS.md  MUDANCAS_ATENDENTE_HUMANO.md  MUDANCAS_FORMATO_ENTIDADES.md  Makefile  PROCESSAMENTO_WEBHOOK_WHATSAPP.md  README-Docker.md  README.md  README_ADMIN_EMPRESA.md  README_ENTIDADES_FIXAS.md  README_MODELO_CLIENTE.md  README_MODELO_EMPRESA.md  RESUMO_FORMATO_UNICO.md  REVISAO_FINAL_TIPOMENSAGEM.md  SUGESTOES_ESTRUTURA.md  analise_json_webhook_whatsapp.md  check_faiss.py  check_message_5.py  (+70 more)
.qoder/rules/: project_rules.md  user_rules.md
.trae/: settings.json
.trae/rules/: project_rules.md
ambiente_base_dados/: .dockerignore  Dockerfile  INSTRUCOES_REMOTO.md  README.md  docker-compose.yml  setup.bat  setup.sh
ambiente_base_dados/initdb/: 00-extensions.sql
ambiente_django/: README.md  create_superuser.py  setup.ps1
ambiente_docker/: CHECKLIST_SETUP.md  README-Docker.md  README-Tests-Docker.md  README.md  README_SETUP.md  SOLUCOES_TECNICAS_APLICADAS.md  docker-compose.yml  docker-manager.ps1  setup.bat  setup.sh  validate_setup.bat  validate_setup.sh
ambiente_docker/scripts/: docker-entrypoint-qcluster.sh  docker-entrypoint.sh
ambiente_misto/: README.md  prepare_env.py  run.bat  run.sh  setup.bat  setup.sh  stop.bat  stop.sh  update_docker_compose.py  update_dockerfile.py  update_git_exclude.py  update_settings.py
docker/postgres/initdb/: 00-extensions.sql
docs/: feature_creation_methodology.md
docs/api/: ai_engine_facade.md  initial_loading_facade.md  services_facade.md
docs/api/ai_engine/: analise_conteudo.md  load_document_file.md
docs/api/initial_loading/: firebase_init.md
docs/api/services/: vetor_storage.md
docs/diagramas/oraculo/: Diagrama Oraculo _ Mermaid Chart-2025-07-12-145422.mmd  Diagrama Oraculo _ Mermaid_140725.mmd  NOTAS_EXPLICATIVAS.md
docs/diagramas/oraculo/entidades/: NOTAS_EXPLICATIVAS_ENTIDADES.md
docs/diagramas/oraculo/fluxo_geral/: diagrama_geral.mmd
docs/diagramas/oraculo/fluxo_geral/resumo/: diagrama_resumido_fluxo_recebimento_mensagem.mmd
docs/diagramas/oraculo/fluxo_recebimento_mensagem/: CHECKLIST_IMPLEMENTACAO.md  DIRETRIZES_FORMATACAO_MERMAID.md  NOTAS_EXPLICATIVAS_DIAGRAMA_FLUXO.md  NOTAS_EXPLICATIVAS_FLUXO_MSG.md  diagrama_fluxo_recebimento_mensagem.mmd
docs/diagramas/oraculo/fluxo_recebimento_mensagem/resumo/: RESUMO_FLUXO_RECEBIMENTO_MENSAGEM.md
docs/diagramas/oraculo/webhook_whatsapp/: fluxograma_webhook_whatsapp.mmd  fluxograma_webhook_whatsapp_notas.md
docs_dev/: arquitetura_embedding_data.md  fluxo_treinamento_otimizado.md
docs_dev/diagramas/: INSTRUCOES_CRIACAO_DIAGRAMA.md
docs_dev/diagramas/oraculo/webhook_whatsapp/: fluxograma_webhook_whatsapp_notas.md
docs_dev/evolution_api/: tabela-eventos-evolution-api-v2.md
docs_dev/informações_treinamento/: Apresentação.txt
docs_dev/normalizacao/: user_rules_backup.md
docs_dev/normalizacao/features/: feature_creation_methodology.md  prompt_new_feature.md
docs_dev/planejamento/models/: query_compose.md
scripts/: docker-entrypoint-qcluster.sh  docker-entrypoint.sh  health-check.py  migrar_remoto.bat  migrar_remoto.py  new_feature_script.py  setup-docker.ps1  setup-docker.sh  start-docker-dev.ps1  start-docker-dev.sh  start-docker-prod.ps1  start-docker.ps1
scripts/seed_query_compose/: dados_query_compose_bd.json  seed_query_compose.py
src/smart_core_assistant_painel/: main.py
src/smart_core_assistant_painel/app/db/banco_faiss/: dados_faiss.json  index.faiss  index.pkl
src/smart_core_assistant_painel/app/features/: features_compose.py
src/smart_core_assistant_painel/app/ui/: manage.py
src/smart_core_assistant_painel/app/ui/atendimentos/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
src/smart_core_assistant_painel/app/ui/clientes/: admin.py  apps.py  models.py
src/smart_core_assistant_painel/app/ui/core/: asgi.py  middleware.py  roles.py  settings.py  settings.py.backup  settings_test.py  tests.py  urls.py  views.py  wsgi.py
src/smart_core_assistant_painel/app/ui/operacional/: admin.py  apps.py  models.py
src/smart_core_assistant_painel/app/ui/oraculo/: CHATBOT_README.md  __init__.py  admin.py  apps.py  embedding_data.py  fields.py  mensagens_clientes.txt  models.py  models_departamento.py  models_documento.py  models_old.py  models_treinamento.py  signals.py  tests_chatbot.py  urls.py  utils.py  views.py  wrapper_evolutionapi.py
src/smart_core_assistant_painel/app/ui/treinamento/: admin.py  apps.py  models.py  services.py  signals.py  urls.py  views.py
src/smart_core_assistant_painel/app/ui/usuarios/: admin.py  apps.py  models.py  urls.py  views.py
src/smart_core_assistant_painel/modules/ai_engine/: __init__.py
src/smart_core_assistant_painel/modules/ai_engine/features/: features_compose.py
src/smart_core_assistant_painel/modules/ai_engine/utils/: erros.py  parameters.py  types.py
src/smart_core_assistant_painel/modules/initial_loading/: __init__.py  start_initial_loading.py
src/smart_core_assistant_painel/modules/services/: __init__.py  start_services.py
src/smart_core_assistant_painel/utils/: consts.py  erros.py  parameters.py  types.py
tests/: __init__.py  conftest.py
tests/app/ui/oraculo/: test_views_error_handling.py
tests/modules/: __init__.py
tests/modules/ai_engine/: __init__.py
tests/modules/ai_engine/features/: __init__.py  test_features_compose.py
tests/modules/initial_loading/: __init__.py
tests/modules/services/: test_start_services.py
tests/modules/services/features/: test_service_hub.py
(+227 files in other folders)
